--- a/quiz.html
+++ b/quiz.html
@@ -38,28 +38,134 @@
 
     <form action="resultat.php" method="post">
 
-        <h2>Question 1: Quelle est la capitale de la France?</h2>
+        <h2>Question 1 : Qui est le dernier gagnant de la Ligue Française de League of Legends ?</h2>
         <label>
-            <input type="radio" name="q1" value="paris"> Paris
+            <input type="radio" name="q1" value="GamersOrigin"> GamersOrigin (GO) 
         </label>
         <label>
-            <input type="radio" name="q1" value="londres"> Londres
+            <input type="radio" name="q1" value="BDSAcademy"> BDS Academy
         </label>
         <label>
-            <input type="radio" name="q1" value="berlin"> Berlin
-        </label>
-
-        <h2>Question 2: Quel est le langage de programmation utilisé dans ce quiz?</h2>
-        <label>
-            <input type="radio" name="q2" value="php"> PHP
-        </label>
-        <label>
-            <input type="radio" name="q2" value="java"> Java
-        </label>
-        <label>
-            <input type="radio" name="q2" value="python"> Python
+            <input type="radio" name="q1" value="KarmineCorp"> Karmine Corp 
         </label>
 
+        <label>
+            <input type="radio" name="q1" value="Vitality Bee"> Vitality Bee
+        </label>
+
+        <h2>Question 2 : Quel âge a Vatira, la star de l'équipe rocket league de la Karmine Corp actuellement ?</h2>
+        <label>
+            <input type="radio" name="q2" value="18ans"> 18 ans
+        </label>
+        <label>
+            <input type="radio" name="q2" value="17ans"> 17 ans
+        </label>
+        <label>
+            <input type="radio" name="q2" value="16ans"> 16 ans
+        </label>
+        <label>
+            <input type="radio" name="q2" value="15ans"> 15 ans
+        </label>
+
+        <h2>Question 3 : Quelle équipe a cédé son slot LEC à BDS en 2021 ?</h2>
+        <label>
+            <input type="radio" name="q3" value="Astralis"> Astralis
+        </label>
+        <label>
+            <input type="radio" name="q3" value="Excel"> Excel
+        </label>
+        <label>
+            <input type="radio" name="q3" value="Rogue"> Rogue
+        </label>
+        <label>
+            <input type="radio" name="q3" value="Schalke04"> Schalke 04 Esport
+        </label>
+
+        <h2>Question 4 : Quelle équipe a entrainé YamatoCannon de 2020 jusqu'en 2022 en LEC ?</h2>
+        <label>
+            <input type="radio" name="q4" value="Fnatic"> Fnatic
+        </label>
+        <label>
+            <input type="radio" name="q4" value="Vitality"> Vitality
+        </label>
+        <label>
+            <input type="radio" name="q4" value="Splyce"> Splyce
+        </label>
+        <label>
+            <input type="radio" name="q4" value="KarmineCorp"> Karmine Corp
+        </label>
+
+        <h2>Question 5 : Quel joueur français connu pour son aim hors du commun, s'étant fait repéré sur CSGO, a fait sa transition sur Valorant en 2020 ?</h2>
+        <label>
+            <input type="radio" name="q5" value="KennyS"> KennyS
+        </label>
+        <label>
+            <input type="radio" name="q5" value="Zywoo"> Zywoo
+        </label>
+        <label>
+            <input type="radio" name="q5" value="Scream"> Scream
+        </label>
+        <label>
+            <input type="radio" name="q5" value="XMS"> XMS
+        </label>
+        
+        <h2>Question 6 : Qui a gagné les championnats du monde de Rocket League en 2022 ?</h2>
+        <label>
+            <input type="radio" name="q6" value="BDS"> BDS
+        </label>
+        <label>
+            <input type="radio" name="q6" value="Vitality"> Vitality
+        </label>
+        <label>
+            <input type="radio" name="q6" value="TeamLiquid"> Team Liquid
+        </label>
+        <label>
+            <input type="radio" name="q6" value="G2Esport"> G2 Esport
+        </label>
+
+        <h2>Question 7 : Qui a remporté la première édition des VCT Game Changers, la compétition féminine de Valorant en 2023 ?</h2>
+        <label>
+            <input type="radio" name="q7" value="NaViCelestrials"> NAVI Celestials
+        </label>
+        <label>
+            <input type="radio" name="q7" value="BBLQueens"> BBL Queens
+        </label>
+        <label>
+            <input type="radio" name="q7" value="KarmineCorpGC"> Karmine Corp GC
+        </label>
+        <label>
+            <input type="radio" name="q7" value="AcendRising"> Acend Rising
+        </label>
+
+        <h2>Question 8 : Quel joueur américain de Rocket League a donné son nom à une action dans le jeu (Un Reset)</h2>
+        <label>
+            <input type="radio" name="q8" value="Itachi"> Itachi
+        </label>
+        <label>
+            <input type="radio" name="q8" value="Kaydop"> Kaydop
+        </label>
+        <label>
+            <input type="radio" name="q8" value="Rise"> Rise
+        </label>
+        <label>
+            <input type="radio" name="q8" value="Arsenal"> Arsenal
+        </label>
+
+        <h2>Question 9 : Quelle équipe a réalisé le split parfait (18 victoires pour 0 défaite) lors du Summer Split 2015 des EU LCS (Ancien nom désignant le LEC)</h2>
+        <label>
+            <input type="radio" name="q9" value="GambitGaming"> Gambit Gaming
+        </label>
+        <label>
+            <input type="radio" name="q9" value="TeamROCCAT"> Team ROCCAT 
+        </label>
+        <label>
+            <input type="radio" name="q9" value="CopenhagenWolves"> Copenhagen Wolves 
+        </label>
+        <label>
+            <input type="radio" name="q9" value="Fnatic"> Fnatic
+        </label>
+
+        <br>
         <input type="submit" value="Soumettre">
 
     </form>
