--- a/article1.html
+++ b/article1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <title>La Karmine Corp en LEC</title>
         <meta charset="utf-8">
