--- a/article2.html
+++ b/article2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <title>La Karmine Corp sur Rocket League </title>
         <meta charset="utf-8">
